# free-whisper

./: .gitignore  CLAUDE.md  LICENSE  README.md  app_entry.py  build_hook.py  free-whisper.spec  free_whisper.spec  pyproject.toml  requirements-dev.txt  requirements.txt  rthook_ctranslate2.py
.claude/: launch.json  settings.json  settings.local.json
assets/icons/: app_icon.icns
assets/styles/: dark_theme.qss  light_theme.qss
scripts/: generate_icons.py
src/free_whisper/: __main__.py  main.py
src/free_whisper/core/: audio_recorder.py  hotkey_listener.py  injector.py  transcriber.py
src/free_whisper/db/: database.py  migrations.py  models.py
src/free_whisper/ui/: app.py  main_window.py  tray_icon.py
src/free_whisper/ui/pages/: dictionary_page.py  settings_page.py  transcripts_page.py
src/free_whisper/ui/widgets/: cursor_overlay.py
src/free_whisper/utils/: log.py  platform_utils.py  settings_manager.py
