[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "free-whisper"
version = "0.1.0"
description = "Local speech-to-text desktop app using faster-whisper"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "PyQt6>=6.6.0",
    "keyboard>=0.13.5",
    "pyperclip>=1.8.2",
    "pyautogui>=0.9.54",
    'pywin32>=306; sys_platform=="win32"',
]

[project.scripts]
free-whisper = "free_whisper.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
free_whisper = ["assets/**/*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
